--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,16 @@ ol li::marker {
   color: #f97316;
   /* Tailwind's orange-500 */
 }
+
+.perspective {
+  perspective: 1000px;
+}
+.transform-style {
+  transform-style: preserve-3d;
+}
+.backface-hidden {
+  backface-visibility: hidden;
+}
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
